--- a/public/god_create_game.html
+++ b/public/god_create_game.html
@@ -30,7 +30,7 @@
   <body ng-app="starterApp" ng-controller="WolfCtrl" layout="row" ng-cloak >
     <div flex layout="column" tabIndex="-1" role="main" class="md-whiteframe-z2">
       <wizard hide-indicators="true" current-step="currentStep">
-        <wz-step wz-title="Configure">
+        <wz-step wz-title="create_game">
           <md-content flex id="content">
             <h3>游戏设置</h3>
             <md-list ng-cloak>
@@ -55,6 +55,16 @@
             </div>
           </md-content>
         </wz-step>
+        <wz-step wz-title="user_signin">
+          <md-content flex>
+          <h3>所有玩家请登陆,当前游戏房间号码: {{ s.room_id }}</h3>
+        </md-content>
+        </wz-step>
+        <wz-step ng-repeat="scene in autoScenes" wz-title="{{scene}}">
+          <md-content flex>
+            <h3>{{scripts[scene]}}</h3>
+          </md-content>
+        </wz-step>
       </wizard>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
@@ -65,13 +75,13 @@
     <script type="text/javascript">
     angular
       .module('starterApp',['ngMaterial', 'mgo-angular-wizard'])
-      .controller('WolfCtrl', ['$scope', '$http', '$timeout', 'WizardHandler', '$mdDialog', function($scope, $http, $timeout, WizardHandler, $mdDialog) {
+      .controller('WolfCtrl', ['$scope', '$http', 'WizardHandler', '$mdDialog', function($scope, $http, WizardHandler, $mdDialog) {
         var voice = window.speechSynthesis;
         $scope.speak = function(text) {
           if (!$scope.s.voiceEnabled) return;
-          var msg = new SpeechSynthesisUtterance(text);
-          msg.lang = "zh-CN";
-          voice.speak(msg);
+          var utterance = new SpeechSynthesisUtterance(text);
+          utterance.lang = "zh-CN";
+          voice.speak(utterance);
         }
 
         $scope.players = [
@@ -85,22 +95,22 @@
           { name: '白痴', symbol: 'idiot' }
         ];
         $scope.s = {
-          voiceEnabled: false,
+          voiceEnabled: true,
           villager: {
             players: [],
-            count: 3
+            count: 1
           },
           werewolf: {
             players: [],
-            count: 3
+            count: 1
           },
           seer: {
-            exists: true,
+            exists: false,
             player: -1,
             result: ''
           },
           witch: {
-            exists: true,
+            exists: false,
             player: -1,
             canSave: true,
             canPoison: true
@@ -110,7 +120,7 @@
             player: -1
           },
           hunter: {
-            exists: true,
+            exists: false,
             player: -1,
             canShoot: true
           },
@@ -121,12 +131,8 @@
             player: -1
           }
         };
-
         $scope.createGame = function() {
-          $http({
-            method: 'GET',
-            url: '/create_room',
-            params: {
+          $http.post('/create_room', {
               num_players: $scope.totalPlayers(),
               num_werewolves: $scope.s.werewolf.count,
               seer: $scope.s.seer.exists,
@@ -134,13 +140,124 @@
               idiot: $scope.s.idiot.exists,
               hunter: $scope.s.hunter.exists
             }
-          }).then(
+          ).then(
             function onSuccess (response) {
               console.log(response.data);
+              $scope.s.room_id = response.data.room_id;
+              $scope.startHeartbeat();
             }, function onFailure () {
 
             });
         };
+
+        var heartbeatTimer = null;
+        $scope.currentStep = "";
+        $scope.startHeartbeat = function() {
+          var room_id = $scope.s.room_id;
+          if (room_id == null) return;
+          if (heartbeatTimer) {
+            // set the interval again
+            window.clearInterval(heartbeatTimer);
+          }
+          heartbeatTimer = window.setInterval(function() {
+            $http.get(['', room_id, 'cur_move'].join('/')).then(
+              function onSuccess (response) {
+                var newStep = response.data.cur_move;
+                if (newStep != $scope.currentStep) {
+                  WizardHandler.wizard().goTo(newStep);
+                }
+              }, function onFailure () {
+
+              });
+            }, 500);
+        }
+
+/*
+START = :user_signin
+
+SCENES = [
+  :all_close,
+  :cupit_open_1st,
+  :cupit_connect_1st,
+  :cupit_close_1st,
+  :cupit_allOpen_1st,
+  :cupit_allCheckCouple_1st, # if couple, couple can be displayed on user's screen
+  :cupit_allClose_1st,
+  :cupit_coupleOpen_1st,
+  :cupit_coupleClose_1st,  
+  :werewolves_open,
+  :werewolves_kill,
+  :werewolves_close,
+  :witch_open,
+  :witch_rescue,
+  :witch_poison,
+  :witch_close,
+  :seer_open,
+  :seer_check,
+  :seer_close,
+  :all_open,
+  :all_compaign_1st,
+  :reveal_death,
+  :dead_lastWords_1st,
+  :all_speakAndVote,
+  :banished_action,
+  :dead_lastWords,
+].freeze
+*/
+
+        var Scripts = $scope.scripts = {
+          'create_game': '',
+          'user_signin': '欢迎来到 来英慢 的舞台，请各位玩家按照上帝屏幕上的房间号码登陆游戏', // 来英慢 发音比较像，哈哈哈
+          'all_close': '所有玩家登陆完毕，游戏现在开始。天黑请闭眼',
+          'werewolves_open': '狼人请睁眼，互相确认身份',
+          'werewolves_kill': '狼人请讨论并决定击杀目标，并由一位狼队有在自己手机上输入击杀目标',
+          'werewolves_close': '狼人请闭眼',
+          'witch_open': '女巫请睁眼',
+          'witch_rescue': '女巫请看自己手机屏幕确定昨日死亡玩家，并确定是否使用解药',
+          'witch_poison': '女巫请选择是否使用毒药',
+          'witch_close': '女巫请闭眼',
+          'seer_open': '预言家请睁眼',
+          'seer_check': '预言家请验人, 您所验证的玩家是否为狼人将在您的手机上显示',
+          'seer_close': '预言家请闭眼',
+          'all_open': '全体玩家请睁眼',
+          'all_compaign_1st': '开始警长竞选,完毕后请在上帝电脑上输入警长身份号码',
+          'reveal_death': '昨天晚上死亡的玩家是',
+          'dead_lastWords_1st': '请死亡玩家发表遗言',
+          'all_speakAndVote': '请大家依次发言，并投票决定放逐，结束后请在上帝电脑上输入放逐目标',
+          'banished_action': '请被放逐玩家留遗言，并决定是否发动技能',
+          'villagers_win': '平民阵营获胜',
+          'werewolves_win': '狼人阵营获胜'
+        };
+
+        $scope.autoScenes = [
+          'all_close',
+          'werewolves_open',
+          'werewolves_kill',
+          'werewolves_close',
+          'witch_open',
+          'witch_rescue',
+          'witch_poison',
+          'witch_close',
+          'seer_open',
+          'seer_check',
+          'seer_close',
+          'all_open',
+          'villagers_win',
+          'werewolves_win'
+        ];
+
+        // play sound
+        $scope.$watch('currentStep', function(newStep, oldStep) {
+          if (newStep == oldStep) {
+            return;
+          }
+          var text = Scripts[newStep];
+          if (text == null) {
+            text = '该步骤尚未实现，请联系开发者';
+          }
+          window.setTimeout(function() { $scope.speak(text); }, 1000);
+        });
+
         $scope.totalPlayers = function() {
           var num = 0;
           angular.forEach($scope.players, function(player) {
