--- a/public/god_create_game.html
+++ b/public/god_create_game.html
@@ -63,6 +63,24 @@
         <wz-step ng-repeat="scene in autoScenes" wz-title="{{scene}}">
           <md-content flex>
             <h3>{{scripts[scene]}}</h3>
+            <md-list ng-cloak ng-if="scene == 'all_compaign_1st'">
+              <md-list-item>
+                <p>请输入警长人选，空白为无警长</p>
+                <input flex="20" type="number" aria-label="user_id" ng-model="s.police">
+              </md-list-item>
+              <md-list-item>
+                <md-button flex="100" layout-align="end center" class="md-raised md-primary" ng-click="selectPolice()">确定</md-button>
+              </md-list-item>
+            </md-list>
+            <md-list ng-cloak ng-if="scene == 'all_speakAndBanish'">
+              <md-list-item>
+                <p>请输入放逐目标</p>
+                <input flex="20" type="number" aria-label="user_id" ng-model="s.banish">
+              </md-list-item>
+              <md-list-item>
+                <md-button flex="100" layout-align="end center" class="md-raised md-primary" ng-click="selectBanish()">确定</md-button>
+              </md-list-item>
+            </md-list>
           </md-content>
         </wz-step>
       </wizard>
@@ -98,11 +116,11 @@
           voiceEnabled: true,
           villager: {
             players: [],
-            count: 1
+            count: 2
           },
           werewolf: {
             players: [],
-            count: 1
+            count: 2
           },
           seer: {
             exists: false,
@@ -164,14 +182,18 @@
               function onSuccess (response) {
                 var newStep = response.data.cur_move;
                 if (newStep != $scope.currentStep) {
+                  if (newStep == 'reveal_death') {
+                    $scope.s.death_tonight = response.data.death;
+                  }
+                  console.log("change to " + newStep);
+                  console.log(response.data);
                   WizardHandler.wizard().goTo(newStep);
                 }
               }, function onFailure () {
 
               });
             }, 500);
-        }
-
+        };
 /*
 START = :user_signin
 
@@ -199,7 +221,7 @@ SCENES = [
   :all_compaign_1st,
   :reveal_death,
   :dead_lastWords_1st,
-  :all_speakAndVote,
+  :all_speakAndBanish,
   :banished_action,
   :dead_lastWords,
 ].freeze
@@ -223,7 +245,7 @@ SCENES = [
           'all_compaign_1st': '开始警长竞选,完毕后请在上帝电脑上输入警长身份号码',
           'reveal_death': '昨天晚上死亡的玩家是',
           'dead_lastWords_1st': '请死亡玩家发表遗言',
-          'all_speakAndVote': '请大家依次发言，并投票决定放逐，结束后请在上帝电脑上输入放逐目标',
+          'all_speakAndBanish': '请大家依次发言，并投票决定放逐，结束后请在上帝电脑上输入放逐目标',
           'banished_action': '请被放逐玩家留遗言，并决定是否发动技能',
           'villagers_win': '平民阵营获胜',
           'werewolves_win': '狼人阵营获胜'
@@ -242,8 +264,11 @@ SCENES = [
           'seer_check',
           'seer_close',
           'all_open',
+          'all_compaign_1st',
+          'reveal_death',
+          'all_speakAndBanish',
           'villagers_win',
-          'werewolves_win'
+          'werewolves_win',
         ];
 
         // play sound
@@ -252,6 +277,15 @@ SCENES = [
             return;
           }
           var text = Scripts[newStep];
+
+          if (newStep == 'reveal_death') {
+            var death = $scope.s.death_tonight;
+            if (death.length == 0) {
+              text = '昨夜是平安夜';
+            } else {
+              text += death.map(function(num) {return num + '号'}).join(',') + "玩家。"
+            }
+          }
           if (text == null) {
             text = '该步骤尚未实现，请联系开发者';
           }
@@ -268,12 +302,27 @@ SCENES = [
           });
           return num;
         };
+
         $scope.playerNums = function() {
           var num = $scope.totalPlayers();
           var p = [];
           for(var i = 1; i <= num; ++i) p.push(i);
           return p;
         };
+
+        $scope.selectPolice = function() {
+          $http.post(['', $scope.s.room_id, 'god_take_action'].join('/'), {
+            action: 'select_police',
+            target: $scope.s.police
+          });
+        };
+
+        $scope.selectBanish = function() {
+          $http.post(['', $scope.s.room_id, 'god_take_action'].join('/'), {
+            action: 'select_banish',
+            target: $scope.s.banish
+          });
+        }
       }]);
     </script>
   </body>
