add support for seer

--- a/public/god_create_game.html
+++ b/public/god_create_game.html
@@ -123,7 +123,7 @@
             count: 2
           },
           seer: {
-            exists: false,
+            exists: true,
             player: -1,
             result: ''
           },
@@ -216,6 +216,7 @@ SCENES = [
   :witch_close,
   :seer_open,
   :seer_check,
+  :seer_checkResult,
   :seer_close,
   :all_open,
   :all_compaign_1st,
@@ -240,6 +241,7 @@ SCENES = [
           'witch_close': '女巫请闭眼',
           'seer_open': '预言家请睁眼',
           'seer_check': '预言家请验人, 您所验证的玩家是否为狼人将在您的手机上显示',
+          'seer_checkResult': '预言家，您验证的玩家是',
           'seer_close': '预言家请闭眼',
           'all_open': '全体玩家请睁眼',
           'all_compaign_1st': '开始警长竞选,完毕后请在上帝电脑上输入警长身份号码',
@@ -262,6 +264,7 @@ SCENES = [
           'witch_close',
           'seer_open',
           'seer_check',
+          'seer_checkResult',
           'seer_close',
           'all_open',
           'all_compaign_1st',
