--- a/public/god_create_game.html
+++ b/public/god_create_game.html
@@ -128,7 +128,7 @@
             result: ''
           },
           witch: {
-            exists: false,
+            exists: true,
             player: -1,
             canSave: true,
             canPoison: true
@@ -231,7 +231,7 @@ SCENES = [
         var Scripts = $scope.scripts = {
           'create_game': '',
           'user_signin': '欢迎来到 来英慢 的舞台，请各位玩家按照上帝屏幕上的房间号码登陆游戏', // 来英慢 发音比较像，哈哈哈
-          'all_close': '所有玩家登陆完毕，游戏现在开始。天黑请闭眼',
+          'all_close': '天黑请闭眼',
           'werewolves_open': '狼人请睁眼，互相确认身份',
           'werewolves_kill': '狼人请讨论并决定击杀目标，并由一位狼队有在自己手机上输入击杀目标',
           'werewolves_close': '狼人请闭眼',
